# german-visa-rag

./: .env.example  .gitignore  Dockerfile  README.md  README_TC.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd-cloud-run.yml  ci-test.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_TC.md
eval/: eval_dataset.json  ragas_evaluator.py  run_eval.sh
infra/: gcp_cloud_run_deploy.yaml  qdrant_cloud_setup.md
scripts/: cleanup.py  deploy.sh  test_provider.py
src/: config.py  exceptions.py  logger.py  main.py
src/api/: auth.py  routes.py  sse.py
src/ingestion/: chunker.py  cli.py  crawl_strategy.py  crawler.py  ingestion_pipeline.py  scheduler.py  seed_urls.yml  url_discoverer.py
src/llm/: __init__.py  ollama_client.py  openai_client.py  token_counter.py
src/models/: chat.py  chunk.py
src/observability/: mlflow_tracker.py
src/rag/: answer_generator.py  hybrid_retriever.py  prompt_builder.py  query_transformer.py  reranker.py
src/scripts/: inspect_chunks.py
src/utils/: hash_utils.py  resilience.py  text_utils.py
tests/: conftest.py
tests/fixtures/: mock_urls.yml  sample_html.html
tests/integration/: test_api_endpoints.py  test_ingestion_pipeline.py  test_qdrant_upsert.py
tests/unit/: test_chunker.py  test_discovery_cache.py  test_hybrid_retriever.py  test_prompt_builder.py  test_query_transformer.py  test_url_discoverer.py
